--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -13,12 +13,12 @@
       <image class="avatar" src="{{userInfo.avatar}}" />
       <view class="data-wrap">
         <view class="data-item">
-          <view class="data-title">获赞与收藏</view>
-          <view class="data">{{NUM.over((likeNumber + collectionTimes), 100000)}}</view>
+          <view class="data-title">获赞</view>
+          <view class="data">{{NUM.over(beLikedTimes, 100000)}}</view>
         </view>
         <view class="data-item">
           <view class="data-title">关注</view>
-          <view class="data">{{NUM.over(followNumber, 100000)}}</view>
+          <view class="data">{{NUM.over(followedAuthorNumber, 100000)}}</view>
         </view>
         <view class="data-item">
           <view class="data-title">粉丝</view>
