--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -4,10 +4,8 @@
   <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{authorInfo.bg || 'https://img.ubo.vip/tiddler/bg.jpg'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
   <back-icon style="margin-left: 8px;" />
-  <block wx:if="{{navBarVisible}}">
-    <image class="user-avatar" src="{{authorInfo.avatar}}" />
-    <view class="user-name">{{authorInfo.nickname}}</view>
-  </block>
+  <image class="user-avatar" wx:if="{{navBarVisible}}" src="{{authorInfo.avatar}}" />
+  <view class="user-name" wx:if="{{navBarVisible}}">{{authorInfo.nickname}}</view>
 </view>
 
 <view class="container">
