--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -1,9 +1,13 @@
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
-<view class="nav-bar" style="padding-top: {{statusBarHeight}}px; opacity: {{navBarVisible ? 100 : 0}}; background-image: url({{userInfo.bg || 'https://img.ubo.vip/tiddler/bg.jpg'}});">
-  <view class="bg-cover" />
-  <image class="user-avatar" src="{{userInfo.avatar}}" />
-  <view class="user-name">{{userInfo.nickname}}</view>
+<view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
+  <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://img.ubo.vip/tiddler/bg.jpg'}}" />
+  <view class="bg-cover" wx:if="{{navBarVisible}}" />
+  <view class="setting-wrap row center">
+    <image class="setting" src="./images/setting.png" />
+  </view>
+  <image class="mine-avatar" wx:if="{{navBarVisible}}" src="{{userInfo.avatar}}" />
+  <view class="mine-name" wx:if="{{navBarVisible}}">{{userInfo.nickname}}</view>
 </view>
 
 <view class="container">
