feat: 我的设置中心

--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -6,7 +6,7 @@
 </view>
 
 <view class="list-wrap">
-  <view class="list row between">
+  <view class="list row between" bindtap="navToSettleIn">
     <view class="title">商家入驻</view>
     <image class="arrow" src="./images/arrow.png" />
   </view>
