--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -1,4 +1,4 @@
-<view class="scenic-spot">
+<view class="scenic-spot" bindtap="navToDetail">
   <image class="cover" src="http://img.ubo.vip/youlian/temporary/item_cover_4.jpg" />
   <view class="content">
     <view class="title omit">大岷山万松林滑雪场</view>
