--- a/pages/subpages/home/media/author-center/index.wxml
+++ b/pages/subpages/home/media/author-center/index.wxml
@@ -3,7 +3,7 @@
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
   <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{authorInfo.bg || 'https://img.ubo.vip/tiddler/bg.jpg'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
-  <back-icon style="margin-left: 8px;" />
+  <back-icon style="margin-left: 8px;" noBorder="{{navBarVisible}}" />
   <image class="user-avatar" wx:if="{{navBarVisible}}" src="{{authorInfo.avatar}}" />
   <view class="user-name" wx:if="{{navBarVisible}}">{{authorInfo.nickname}}</view>
 </view>
