--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -35,8 +35,49 @@
       <image style="width:100%; height:100%;" src="{{item}}" mode='aspectFill' lazy-load />
     </swiper-item>
   </swiper>
-  <view class="banner-dots">
-    <text class="cur-dot">{{curDot}}</text>
-    <text> / {{spotInfo.imageList.length + (spotInfo.video ? 1 : 0)}}</text>
+  <view class="banner-dots row">
+    <image class="dot-icon" src="{{(spotInfo.video && curDot === 1) ? './images/video.png' : './images/photo.png'}}" />
+    <text>{{curDot}}/{{spotInfo.imageList.length + (spotInfo.video ? 1 : 0)}}</text>
+  </view>
+</view>
+
+<view class="container">
+  <view class="row between">
+    <view class="row">
+      <view class="name">千岛湖森林氧吧</view>
+      <view class="level-tag row">3A</view>
+    </view>
+    <image class="share-icon" src="./images/share.png" />
+  </view>
+  <view class="score-wrap">
+    <image class="star" src="./images/star-active.png" />
+    <image class="star" src="./images/star-active.png" />
+    <image class="star" src="./images/star-active.png" />
+    <image class="star" src="./images/star-active.png" />
+    <image class="star" src="./images/star.png" />
+    <text class="score">4.4分</text>
+  </view>
+  <view class="info-list-wrap">
+    <view class="info-list row between">
+      <view class="row">
+        <image class="clock-icon" src="./images/time.png" />
+        <view class="opening-status row {{spotInfo.status !== 1 ? 'closed' : ''}}">{{spotInfo.status !== 1 ? '今日已闭园' : '开园中'}}</view>
+        <view class="opening-hours">08:00-17:00开放（17:00停止入园）</view>
+      </view>
+      <view class="row">
+        <view class="more-detail">简介</view>
+        <image class="more-icon" src="./images/more.png" />
+      </view>
+    </view>
+    <view class="info-list row between">
+      <view class="row">
+        <image class="position-icon" src="./images/position.png" />
+        <view class="opening-hours">杭州市淳安县千岛湖镇淡竹王子山</view>
+      </view>
+      <button class="navigation-btn" hover-class="none">
+        <image class="navigation-icon" src="./images/navigation.png" />
+        <view>导航</view>
+      </button>
+    </view>
   </view>
 </view>
