--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -45,16 +45,20 @@
 .banner-dots {
   position: absolute;
   right: 24rpx;
-  bottom: 26rpx;
-  width: 78rpx;
-  height: 46rpx;
-  line-height: 46rpx;
-  text-align: center;
+  bottom: 48rpx;
+  padding: 0 12rpx;
+  height: 40rpx;
   color: #fff;
   font-size: 20rpx;
+  line-height: 1;
   font-weight: 500;
   background: rgba(0, 0, 0, 0.3);
-  border-radius: 24rpx 24rpx 4rpx 24rpx;
+  border-radius: 20rpx;
+}
+.dot-icon {
+  margin-right: 8rpx;
+  width: 20rpx;
+  height: 20rpx;
 }
 .cur-dot {
   font-size: 24rpx;
@@ -72,7 +76,7 @@
 .mute-icon-wrap {
   position: absolute;
   left: 24rpx;
-  bottom: 24rpx;
+  bottom: 48rpx;
   width: 50rpx;
   height: 50rpx;
   border-radius: 50%;
@@ -81,4 +85,109 @@
 .mute-icon {
   width: 30rpx;
   height: 30rpx;
+}
+
+.container {
+  position: absolute;
+  left: 0;
+  top: 396rpx;
+  padding: 20rpx;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  border-radius: 24rpx 24rpx 0 0;
+}
+.name {
+  color: #333;
+  font-size: 36rpx;
+  font-weight: bold;
+}
+.level-tag {
+  margin-left: 8rpx;
+  padding: 0 12rpx;
+  height: 32rpx;
+  color: #FFE5BD;
+  font-size: 20rpx;
+  font-weight: bold;
+  line-height: 1;
+  border-radius: 8rpx;
+  background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
+}
+.share-icon {
+  width: 42rpx;
+  height: 42rpx;
+}
+
+.score-wrap {
+  display: flex;
+  align-items: center;
+  margin-top: 10rpx;
+}
+.star {
+  width: 32rpx;
+  height: 32rpx;
+}
+.score {
+  margin-left: 10rpx;
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+
+.info-list-wrap {
+  margin-top: 8px;
+}
+.info-list {
+  height: 88rpx;
+  border-bottom: 1px solid #eee;
+}
+.info-list:last-child {
+  border-bottom: none;
+}
+.clock-icon, .position-icon {
+  margin-right: 12rpx;
+  width: 26rpx;
+  height: 26rpx;
+}
+.opening-status {
+  margin-right: 12rpx;
+  padding: 0 8rpx;
+  height: 30rpx;
+  color: #37B766;
+  font-size: 18rpx;
+  font-weight: bold;
+  line-height: 1;
+  border: 1px solid #37B766;
+  border-radius: 4rpx;
+}
+.opening-status.closed {
+  color: #999;
+  border: 1px solid #999;
+}
+.opening-hours {
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+.more-detail {
+  color: #666;
+  font-size: 24rpx;
+}
+.more-icon {
+  width: 20rpx;
+  height: 20rpx;
+}
+
+.navigation-btn {
+  padding: 0 16rpx;
+  height: 36rpx;
+  color: #666;
+  font-size: 20rpx;
+  border-radius: 16rpx;
+  background: #f1f1f1;
+}
+.navigation-icon {
+  margin-right: 4rpx;
+  width: 18rpx;
+  height: 18rpx;
 }
