--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -191,3 +191,10 @@
   width: 18rpx;
   height: 18rpx;
 }
+
+.title {
+  margin-top: 24rpx;
+  color: #333;
+  font-size: 28rpx;
+  font-weight: bold;
+}
