--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -79,5 +79,41 @@
     </view>
   </view>
 
-  <view class="title">景点门票</view>
+  <view class="title-wrap row between">
+    <view class="title">景点门票</view>
+    <view class="title-tips row">
+      <text>优待政策</text>
+      <image class="more-icon" src="./images/more-blue.png" />
+    </view>
+  </view>
+  <scroll-view class="ticket-type-menu" scroll-x>
+    <view 
+      class="ticket-type-item {{curTicketTypeIdx === index ? 'active' : ''}}" 
+      wx:for="{{ticketTypeList}}" 
+      wx:key="index"
+      bindtap="selectTicketType"
+      data-index="{{index}}"
+    >{{item}}</view>
+  </scroll-view>
+  <view class="collapse">
+    <view class="collapse-item" wx:for="{{ticketList}}" wx:key="index">
+      <view class="collapse-trunk row between">
+        <view class="collapse-trunk-title">{{item.name}}</view>
+        <view class="collapse-trunk-content row" bindtap="toggleFold" data-index="{{index}}">
+          <block wx:if="{{item.fold}}">
+            <text class="base-price">¥{{item.basePrice}}起</text>
+            <image class="arrow" src="./images/arrow-down.png" />
+          </block>
+          <block wx:else>
+            <text>收起</text>
+            <image class="arrow" src="./images/arrow-up.png" />
+          </block>
+        </view>
+      </view>
+      <view class="collapse-subitems" wx:if="{{!item.fold}}">
+        <view class="collapse-subitem">
+        </view>
+      </view>
+    </view>
+  </view>
 </view>
