--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -194,7 +194,7 @@
 }
 
 .title-wrap {
-  margin-top: 24rpx;
+  margin-top: 48rpx;
 }
 .title {
   color: #333;
@@ -246,7 +246,7 @@
 }
 .collapse-trunk-title {
   color: #333;
-  font-size: 26rpx;
+  font-size: 28rpx;
   font-weight: bold;
 }
 .collapse-trunk-content {
@@ -260,4 +260,58 @@
   margin-left: 4rpx;
   width: 24rpx;
   height: 24rpx;
+}
+.collapse-subitem {
+  padding: 24rpx 0;
+  border-bottom: 1px solid #eee;
+}
+.collapse-subitem:last-child {
+  border-bottom: none;
+}
+
+.shop-type {
+  margin-right: 8rpx;
+  padding: 0 8rpx;
+  height: 32rpx;
+  color: #FFE5BD;
+  font-size: 22rpx;
+  line-height: 1;
+  background: linear-gradient(270deg, #404A5C 0%, #0F131A 100%);
+  border-radius: 6rpx;
+}
+.shop-name {
+  color: #333;
+  font-size: 26rpx;
+  font-weight: bold;
+}
+.tips-wrap {
+  margin-top: 18rpx;
+}
+.tips {
+  padding-right: 12rpx;
+  border-right: 1px solid #ddd;
+  margin-right: 12rpx;
+  color: #666;
+  font-size: 22rpx;
+  line-height: 1;
+}
+.tips:last-child {
+  border-right: none;
+}
+.tips.stress {
+  color: #529AFE;
+}
+.booking-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.booking-btn {
+  margin-top: 8rpx;
+  width: 100rpx;
+  height: 60rpx;
+  color: #fff;
+  font-size: 24rpx;
+  border-radius: 30rpx;
+  background: #1986F8;
 }
