--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -51,7 +51,7 @@
   </view>
 
   <view class="score-wrap">
-    <van-rate value="{{spotInfo.grade}}" size="16" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
+    <van-rate value="{{spotInfo.grade}}" size="18" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
     <text class="score">{{spotInfo.grade}}分</text>
   </view>
 
@@ -204,9 +204,62 @@
   <view class="title-wrap">
     <view class="title">点评</view>
   </view>
+  <view class="comment-list">
+    <view class="comment-item">
+      <view class="user-info-wrap row">
+        <image class="user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+        <view class="user-info">
+          <view class="user-name">沫沫</view>
+          <view class="comment-data">2月28日</view>
+        </view>
+        <view class="row">
+          <van-rate value="{{4.2}}" size="16" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
+          <view class="comment-rate">4.2分</view>
+        </view>
+      </view>
+      <view class="comment-content omit">下一次恋爱要从纯爱开始，支支吾吾地把我约出来，结果只是为了看今晚的月色的美丽，为了听拂过耳畔的风，为了送一份我随口一说想吃的提拉米苏。他是坦诚的，明亮的，会在汹涌的人群里朝我伸出手，也会傻傻倚在楼下老榕树旁等我。不小心碰到了手，脸明明红得像个柿子，还要傲娇地说：“要不要和我牵个手呀？”</view>
+      <view class="comment-images row between">
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_6423292630915/xBIuViXth3XLAxeqT4CUFCNNLIK2hBFgdwhqNs7J.jpeg" />
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_642329267e4f8/ISOiz9t2EvRE6qVtFZ2xjh32jZClfYnArgw6hzIZ.jpeg" />
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_64232926ec7c3/P8vDwhVWkc2mhCcYBkGc7gQC0gTAfgXSFXm9s19D.jpeg" />
+        <view class="more-image-tips row center">+2</view>
+      </view>
+    </view>
+    <view class="comment-item">
+      <view class="user-info-wrap row">
+        <image class="user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+        <view class="user-info">
+          <view class="user-name">沫沫</view>
+          <view class="comment-data">2月28日</view>
+        </view>
+        <view class="row">
+          <van-rate value="{{4.2}}" size="16" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
+          <view class="comment-rate">4.2分</view>
+        </view>
+      </view>
+      <view class="comment-content omit">下一次恋爱要从纯爱开始，支支吾吾地把我约出来，结果只是为了看今晚的月色的美丽，为了听拂过耳畔的风，为了送一份我随口一说想吃的提拉米苏。他是坦诚的，明亮的，会在汹涌的人群里朝我伸出手，也会傻傻倚在楼下老榕树旁等我。不小心碰到了手，脸明明红得像个柿子，还要傲娇地说：“要不要和我牵个手呀？”</view>
+      <view class="comment-images row between">
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_6423292630915/xBIuViXth3XLAxeqT4CUFCNNLIK2hBFgdwhqNs7J.jpeg" />
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_642329267e4f8/ISOiz9t2EvRE6qVtFZ2xjh32jZClfYnArgw6hzIZ.jpeg" />
+        <image class="comment-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15099395_64232926ec7c3/P8vDwhVWkc2mhCcYBkGc7gQC0gTAfgXSFXm9s19D.jpeg" />
+        <view class="more-image-tips row center">+2</view>
+      </view>
+    </view>
+    <view class="more-comments-tips row center">
+      <text>共1000条点评</text>
+      <image class="more-icon" src="./images/more.png" />
+    </view>
+  </view>
 
   <view class="title-wrap">
     <view class="title">问答</view>
+  </view>
+  <view class="qa-list">
+    <view class="qa-item top">
+      
+    </view>
+    <view class="qa-item"></view>
+    <view class="qa-item"></view>
   </view>
 
   <view class="title-wrap">
