--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -330,3 +330,68 @@
   border-radius: 30rpx;
   background: #1986F8;
 }
+
+.comment-list {
+  margin-top: 24rpx;
+}
+.comment-item {
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: #fff;
+  box-shadow: 0 0 12rpx 6rpx #f5f6f7;
+  border-radius: 18rpx;
+}
+.user-avatar {
+  width: 68rpx;
+  height: 68rpx;
+  border-radius: 50%;
+}
+.user-info {
+  margin-left: 18rpx;
+  flex: 1;
+}
+.user-name {
+  color: #333;
+  font-size: 24rpx;
+}
+.comment-data {
+  color: #999;
+  font-size: 20rpx;
+}
+.comment-rate {
+  margin-left: 8rpx;
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+.comment-content {
+  margin-top: 18rpx;
+  color: #333;
+  font-size: 24rpx;
+}
+.comment-images {
+  position: relative;
+  margin-top: 18rpx;
+  border-radius: 8rpx;
+  overflow: hidden;
+}
+.comment-image {
+  width: 214rpx;
+  height: 214rpx;
+  border-radius: 8rpx;
+}
+.more-image-tips {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 50rpx;
+  height: 50rpx;
+  color: #333;
+  font-size: 22rpx;
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 4rpx;
+}
+.more-comments-tips {
+  color: #666;
+  font-size: 24rpx;
+}
