--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -245,21 +245,53 @@
         <view class="more-image-tips row center">+2</view>
       </view>
     </view>
-    <view class="more-comments-tips row center">
-      <text>共1000条点评</text>
-      <image class="more-icon" src="./images/more.png" />
-    </view>
+  </view>
+  <view class="total-tips row center">
+    <text>共1000条点评</text>
+    <image class="more-icon" src="./images/more.png" />
   </view>
 
   <view class="title-wrap">
     <view class="title">问答</view>
   </view>
   <view class="qa-list">
-    <view class="qa-item top">
-      
+    <view class="qa-item">
+      <view class="qa-question">千岛湖森林氧吧什么季节最适合去？</view>
+      <view class="answer-user row">
+        <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+        <view class="answer-user-name">小绿女孩</view>
+      </view>
+      <view class="qa-answer omit single-line">建议5-9月份去呀～那时候森林氧吧是最好的时候了，我是去年的6月份去得，正值酷夏来临之前，天气偏暖，去森林氧吧，空气中都弥漫着大自然的味道</view>
+      <view class="qa-label">问</view>
     </view>
-    <view class="qa-item"></view>
-    <view class="qa-item"></view>
+    <view class="qa-item">
+      <view class="qa-question">千岛湖森林氧吧需要玩多久？</view>
+      <view class="qa-answers row">
+        <view class="qa-answers-avatars row">
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+        </view>
+        <view class="qa-answers-number">13人回答</view>
+      </view>
+      <view class="qa-label">问</view>
+    </view>
+    <view class="qa-item">
+      <view class="qa-question">千岛湖森林氧吧好玩吗？</view>
+      <view class="qa-answers row">
+        <view class="qa-answers-avatars row">
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/15099395_642329416d5f9/i0hX323HiYx8uIbCsHISlbbDATrzieNfFUgcfhHf.jpeg" />
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/1112018_6093656e613a3/oY6sVTNFk6komid6RUNI25Z5HT6iptFWUAeQRVZZ.jpeg" />
+          <image class="answer-user-avatar" src="http://img.ubo.vip/uploads/6050889_62839505814e0/NBY9RpALyiHVsO41LRMGZKqqzxjjrkcul5o91iEw.jpeg" />
+        </view>
+        <view class="qa-answers-number">4人回答</view>
+      </view>
+      <view class="qa-label">问</view>
+    </view>
+  </view>
+  <view class="total-tips row center">
+    <text>共100条问答</text>
+    <image class="more-icon" src="./images/more.png" />
   </view>
 
   <view class="title-wrap">
