--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -331,11 +331,8 @@
   background: #1986F8;
 }
 
-.comment-list {
-  margin-top: 24rpx;
-}
 .comment-item {
-  margin-bottom: 24rpx;
+  margin-top: 24rpx;
   padding: 24rpx;
   background: #fff;
   box-shadow: 0 0 12rpx 6rpx #f5f6f7;
@@ -391,7 +388,81 @@
   background: rgba(255, 255, 255, 0.6);
   border-radius: 4rpx;
 }
-.more-comments-tips {
+
+.total-tips {
+  margin-top: 24rpx;
   color: #666;
   font-size: 24rpx;
+}
+
+.qa-list {
+  margin-top: 24rpx;
+}
+.qa-item {
+  position: relative;
+  padding: 24rpx 42rpx;
+  border-bottom: 1px solid #eee;
+}
+.qa-item:first-child {
+  margin-bottom: 8px;
+  background: #fff;
+  box-shadow: 0 0 12rpx 6rpx #f5f6f7;
+  border-radius: 18rpx;
+  border-bottom: none;
+}
+.qa-item:last-child {
+  margin-bottom: 24rpx;
+}
+.qa-question {
+  color: #333;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+.answer-user {
+  margin-top: 18rpx;
+  margin-left: 8rpx;
+}
+.qa-answers-avatars {
+  margin-left: 8rpx;
+}
+.answer-user-avatar {
+  margin-left: -8rpx;
+  width: 24rpx;
+  height: 24rpx;
+  border-radius: 50%;
+  border: 2rpx solid #fff;
+}
+.answer-user-name {
+  margin-left: 8rpx;
+  color: #333;
+  font-size: 22rpx;
+}
+.qa-answers {
+  margin-top: 12rpx;
+}
+.qa-answer {
+  margin-top: 4rpx;
+  color: #666;
+  font-size: 22rpx;
+}
+.qa-answers-number {
+  margin-left: 8rpx;
+  color: #666;
+  font-size: 22rpx;
+}
+.qa-label {
+  position: absolute;
+  left: 0;
+  top: 26rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30rpx;
+  height: 30rpx;
+  color: #fff;
+  font-size: 18rpx;
+  font-weight: bold;
+  line-height: 1;
+  background: #1986F8;
+  border-radius: 0 6rpx 6rpx 0;
 }
