--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -302,150 +302,7 @@
     </view>
   </view>
   <scroll-view class="hotel-list" scroll-x>
-    <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc85e023/4uPSXbFzNsQt13bvyvURZtMj1YOqc7okLbSKdxSv.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖美客爱途民宿千岛湖美客爱途民宿千岛湖美客爱途民宿千岛湖美客爱途民宿</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.6</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">舒适民宿</view>
-        </view>
-        <view class="hotel-tag row">停车场</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.5km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{566}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc80e25d/uF2jdRqXSBtSAxRdX4cdLJvvApNreExaVw51LU5t.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖瑞利淡竹度假</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.3</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">高档酒店</view>
-        </view>
-        <view class="hotel-tag row">商务出行</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.1km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{500}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
-     <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc85e023/4uPSXbFzNsQt13bvyvURZtMj1YOqc7okLbSKdxSv.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖美客爱途民宿</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.6</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">舒适民宿</view>
-        </view>
-        <view class="hotel-tag row">停车场</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.5km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{566}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc80e25d/uF2jdRqXSBtSAxRdX4cdLJvvApNreExaVw51LU5t.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖瑞利淡竹度假</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.3</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">高档酒店</view>
-        </view>
-        <view class="hotel-tag row">商务出行</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.1km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{500}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
-     <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc85e023/4uPSXbFzNsQt13bvyvURZtMj1YOqc7okLbSKdxSv.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖美客爱途民宿</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.6</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">舒适民宿</view>
-        </view>
-        <view class="hotel-tag row">停车场</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.5km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{566}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
-    <view class="hotel-item">
-      <image class="hotel-image" mode="aspectFill" src="http://img.ubo.vip/uploads/15095212_63f83fc80e25d/uF2jdRqXSBtSAxRdX4cdLJvvApNreExaVw51LU5t.jpeg" />
-      <view class="hotel-info">
-        <view class="hotel-name omit single-line">千岛湖瑞利淡竹度假</view>
-        <view class="hotel-appraise row">
-          <view class="hotel-rate">
-            <text class="hotel-rate-number">4.3</text>
-            <text>分</text>
-          </view>
-          <view class="hotel-type">高档酒店</view>
-        </view>
-        <view class="hotel-tag row">商务出行</view>
-        <view class="hotel-distance-wrap row between">
-          <view class="hotel-distance row">
-            <image class="hotel-distance-icon" src="./images/position.png" />
-            <text>距景点4.1km</text>
-          </view>
-          <view class="price-wrap row">
-            <price-unit price="{{500}}" fontSize="20rpx" integerFontSize="28rpx" />
-            <text> 起</text>
-          </view>
-        </view>
-      </view>
-    </view>
+    <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
 
   <view class="title-wrap">
