--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -406,7 +406,7 @@
   font-weight: bold;
   line-height: 1;
   background: #1986F8;
-  border-radius: 0 6rpx 6rpx 0;
+  border-radius: 0 6rpx 6rpx 6rpx;
 }
 
 .hotel-list {
