--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -266,9 +266,16 @@
     <hotel-item wx:for="{{nearbyHotelList}}" wx:key="index" info="{{item}}" />
   </scroll-view>
 
-  <view class="title-wrap">
+  <view class="title-wrap row between">
     <view class="title">附近景点</view>
+    <view class="row">
+      <view class="more-detail">共10个推荐</view>
+      <image class="more-icon" src="./images/more.png" />
+    </view>
   </view>
+  <scroll-view class="scenic-spot-list" scroll-x enable-flex>
+    <scenic-spot-item wx:for="{{nearbyScenicSpotList}}" wx:key="index" info="{{item}}" />
+  </scroll-view>
 
   <view class="title-wrap">
     <view class="title">达人打卡</view>
